--- a/index.html
+++ b/index.html
@@ -1,23 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>name comes here</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
+    <title>Mobile Responsive Header</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <!-- Your custom CSS -->
     <style>
-        #h1{
-            background-color: aqua;
-            text-align: center;
+        #img {
+            height: 50px;
+        }
+
+        .social-media {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .social-media li {
+            display: inline-block;
+            margin-right: 10px;
+        }
+
+        .fa-circle {
+            border-radius: 50%;
+            background-color: transparent;
+            padding: 10px;
+            transition: background-color 0.3s ease;
+        }
+
+        .fa-circle:hover {
+            background-color: green;
         }
     </style>
 </head>
+
 <body>
-    <div class="container-fluid" id="h1">
-        <p>hello ipsum delorem sem um dert nar ko</p>
-    </div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <div class="d-flex align-items-center">
+                    <ul class="social-media me-auto d-none d-lg-block">
+                        <!-- Circular icons for desktop -->
+                        <li><a href="#" class="fa-circle"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#" class="fa-circle"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#" class="fa-circle"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#" class="fa-circle"><i class="fab fa-dribbble"></i></a></li>
+                    </ul>
+
+                    <!-- Logo -->
+                    <a class="navbar-brand me-auto mx-lg-auto" href="#">
+                        <img src="C:\Users\hassa\Documents\websites\client 1\website 1\images\icon-header.png" alt="Logo" class="img-fluid" id="img">
+                    </a>
+                </div>
+
+                <!-- Search form -->
+                <div class="d-flex align-items-center">
+                    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <form action="#" class="ms-lg-auto">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
+                                <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i class="fa fa-search"></i></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Your custom script -->
+    <script>
+        // Add your custom script here
+    </script>
 </body>
+
 </html>
