--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         .fa-circle:hover {
             background-color: green;
         }
+        
+        #search-bar{
+            margin-right:-5vw ;
+        }
     </style>
 </head>
 
