--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         #search-bar{
             margin-right:-5vw ;
         }
-        @media screen and (max-device-width: 480px) {
+        /*@media screen and (max-device-width: 480px) {
             
         #search-bar{
             margin-right:0vw ;
         }
-        }
+        }*/
     </style>
 </head>
 
