--- a/index.html
+++ b/index.html
@@ -43,16 +43,6 @@
             background-color: green;
             border-color: green;
         }
-
-        #search-bar{
-            margin-right:-5vw ;
-        }
-        /*@media screen and (max-device-width: 480px) {
-            
-        #search-bar{
-            margin-right:0vw ;
-        }
-        }*/
     </style>
 </head>
 
@@ -61,7 +51,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <div class="d-flex align-items-center">
-                    <ul class="social-media me-lg-4 d-none d-lg-block">
+                    <ul class="social-media me-auto d-none d-lg-block">
                         <!-- Circular icons for desktop -->
                         <li><a href="#" class="fa-circle"><i class="fas fa-envelope"></i></a></li>
                         <li><a href="#" class="fa-circle"><i class="fab fa-twitter"></i></a></li>
@@ -70,18 +60,18 @@
                     </ul>
 
                     <!-- Logo -->
-                    <a class="navbar-brand me-lg-0 ms-lg-4 mx-lg-auto" href="#">
+                    <a class="navbar-brand me-auto mx-lg-auto" href="#">
                         <img src="C:\Users\hassa\Documents\websites\client 1\website 1\images\icon-header.png" alt="Logo" class="img-fluid" id="img">
                     </a>
                 </div>
 
                 <!-- Search form -->
-                <div class="d-flex align-items-center" id="search-bar">
+                <div class="d-flex align-items-center">
                     <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <form action="#" class="ms-lg-auto">
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
